Some refactor and fixes:
- when only a verb is enabled, subsequent lines have invisible square that won't show prompt
- fixed crash on edge case where only one verb is enabled
- refactored code for toggle and reorder logic to reduce duplication by extracting out function
- started adding formatting of summary text

--- a/inst/tutorials/datawhats/css/style.css
+++ b/inst/tutorials/datawhats/css/style.css
@@ -81,7 +81,16 @@
   border: 0px dashed transparent;
   width: 2em;
   height: 2em;
-  opacity: 0;
+  color: transparent;
+  background-color: transparent;
+}
+
+.invalid-square {
+  border: 0px dashed transparent;
+  width: 2em;
+  height: 2em;
+  color: transparent;
+  background-color: transparent;
 }
 
 .error-square {
